--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Анора Арт: Искусство Намёка</title>
     <meta name="description" content="Создавайте роскошные чувственные образы с помощью ИИ. Luxury-эстетика, намёки и загадочная атмосфера." />
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </head>
   <body>
     <div id="root"></div>
