--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Анора Арт: Искусство Намёка</title>
+    <title>Анора 18+: Искусство Намёка</title>
     <meta name="description" content="Создавайте роскошные чувственные образы с помощью ИИ. Luxury-эстетика, намёки и загадочная атмосфера." />
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </head>
